--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -4,7 +4,7 @@ export interface Props {
   description: string;
 }
 const { title, description } = Astro.props;
-import '../styles/global.css'
+import '../styles/global.css';
 ---
 
 <head>
@@ -21,5 +21,5 @@ import '../styles/global.css'
   <meta property="og:url" content={Astro.url} />
   <meta property="og:title" content={title} />
   <meta property="og:description" content={description} />
-  <meta name="referrer" content="no-referrer">
+  <meta name="referrer" content="no-referrer" />
 </head>
