--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,20 @@
 ---
-import Head from "../components/Head.astro"
+import Head from '../components/Head.astro';
 ---
 
 <!doctype html>
 <html lang="en">
-	<Head title="Test" description="Hello, world"/>
-	<body>
-		<slot />
-	</body>
+  <Head title="Test" description="Hello, world" />
+  <body>
+    <slot />
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
 </style>
