feat: add basic styles to layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,16 +5,7 @@ import Head from '../components/Head.astro';
 <!doctype html>
 <html lang="en">
   <Head title="Test" description="Hello, world" />
-  <body>
+  <body class="flex min-h-screen bg-[#1f0034] font-mono text-white">
     <slot />
   </body>
 </html>
-
-<style>
-  html,
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
-</style>
