feat: add `author` meta to head

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -22,4 +22,5 @@ import '../styles/global.css';
   <meta property="og:title" content={title} />
   <meta property="og:description" content={description} />
   <meta name="referrer" content="no-referrer" />
+  <meta name="author" content="Retrocast" />
 </head>
