feat: add basic description to main page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,22 @@
 ---
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>Hello, world!</Layout>
+<Layout>
+  <p class="pt-6 pb-2 text-4xl font-bold">Hello, world!</p>
+  <div class="text-sm">
+    <p class="pb-4">
+      I'm <b class="text-primary">Retrocast</b> (<b class="text-primary">she/they</b>) and this is
+      my website/blog. And I guess that's it.
+    </p>
+    <p>
+      Just like the <a
+        href="https://inscryption.fandom.com/"
+        target="_blank"
+        rel="external noreferrer"
+        class="text-primary hover:underline">Inscryption Wiki</a
+      > (I'm admin on there btw), this site is under construction and may stay that way for unknown amount
+      of time.
+    </p>
+  </div>
+</Layout>
