--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout>
+<Layout title="Retrocast" description="Hello, world!">
   <p class="pt-6 pb-2 text-4xl font-bold">Hello, world!</p>
   <div class="text-sm">
     <p class="pb-4">
