--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,4 +2,4 @@
 import Layout from '../../layouts/Layout.astro';
 ---
 
-<Layout>TODO: put blog here</Layout>
+<Layout title="Retrocast's blog" description="List of blog posts">TODO: put blog here</Layout>
