feat: conditionally include GoatCounter in prod

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -25,4 +25,13 @@ import '../styles/global.css';
   <meta name="referrer" content="no-referrer" />
   <meta name="author" content="Retrocast" />
   <ClientRouter />
+  {
+    import.meta.env.PROD && (
+      <script
+        data-goatcounter="https://retrocast.goatcounter.com/count"
+        async
+        src="//gc.zgo.at/count.js"
+      />
+    )
+  }
 </head>
