feat: add basic blog post list to /blog/ page

--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -19,6 +19,6 @@ const entry = await getEntry('posts', post.id)!;
 const { Content } = await render(entry);
 ---
 
-<BlogPost post={post.data}>
+<BlogPost post={post}>
   <Content />
 </BlogPost>
