--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,27 +1,20 @@
 ---
-import type { InferEntrySchema } from 'astro:content';
 import Layout from './Layout.astro';
+import { formatDate } from '../utils/blog';
+import type { BlogPost } from '../content.config';
 
 export interface Props {
-  post: InferEntrySchema<'posts'>;
+  post: BlogPost;
 }
 const { post } = Astro.props;
 
-function formatDate(date: Date): string {
-  return date.toLocaleDateString('en-US', {
-    year: 'numeric',
-    month: 'long',
-    day: 'numeric'
-  });
-}
-
-let date = formatDate(post.date);
+let date = formatDate(post.data.date);
 ---
 
-<Layout title={`${post.title} | Retrocast's blog`} description={post.description}>
+<Layout title={`${post.data.title} | Retrocast's blog`} description={post.data.description}>
   <div class="mx-auto w-full max-w-screen-lg px-4 py-6">
     <div class="flex flex-col items-center">
-      <p class="px-14 pt-6 pb-4 text-center text-4xl font-bold">{post.title}</p>
+      <p class="px-14 pt-6 pb-4 text-center text-4xl font-bold">{post.data.title}</p>
       <p class="text-sm text-gray-400">
         <span>Posted on {date}</span>
       </p>
