--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -12,7 +12,7 @@ let date = formatDate(post.data.date);
 ---
 
 <Layout title={`${post.data.title} | Retrocast's blog`} description={post.data.description}>
-  <div class="mx-auto w-full max-w-screen-lg px-4 py-6">
+  <div class="mx-auto w-full max-w-screen-lg">
     <div class="flex flex-col items-center">
       <p class="px-14 pt-6 pb-4 text-center text-4xl font-bold">{post.data.title}</p>
       <p class="text-sm text-gray-400">
