--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -8,6 +8,6 @@ export interface Props {
 const { posts } = Astro.props;
 ---
 
-<div class="grid grid-cols-3 gap-4">
+<div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
   {posts.map((post) => <PostCard {post} />)}
 </div>
