--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const posts = (await getBlogPosts()).slice(0, 3);
     <p class="text-xl font-bold">Latest blog posts</p>
     <a href="/blog/" class="hover:text-primary underline">all posts →</a>
   </div>
-  <div class="flex flex-col pb-4 md:flex-row">
+  <div class="pb-4">
     <PostList {posts} />
   </div>
 </Layout>
