fix: use correct style for link on main page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const posts = (await getBlogPosts()).slice(0, 3);
         href="https://inscryption.fandom.com/"
         target="_blank"
         rel="external noreferrer"
-        class="text-primary hover:underline">Inscryption Wiki</a
+        class="hover:text-primary underline">Inscryption Wiki</a
       > (I'm admin on there btw), this site is under construction and may stay that way for unknown amount
       of time.
     </p>
