--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -12,7 +12,7 @@ let date = formatDate(post.data.date);
 ---
 
 <Layout title={`${post.data.title} | Retrocast's blog`} description={post.data.description}>
-  <div class="mx-auto w-full max-w-screen-lg">
+  <div class="mx-auto w-full max-w-screen-lg pb-6">
     <div class="flex flex-col items-center">
       <p class="px-14 pt-6 pb-4 text-center text-4xl font-bold">{post.data.title}</p>
       <p class="text-sm text-gray-400">
@@ -21,7 +21,7 @@ let date = formatDate(post.data.date);
     </div>
   </div>
   <div
-    class="prose prose-invert prose-a:hover:text-primary prose-img:rounded-lg prose-img:shadow-primary/30 prose-img:shadow-xl max-w-none text-base text-white"
+    class="prose prose-headings:m-1 prose-invert prose-a:hover:text-primary prose-img:rounded-lg prose-img:shadow-primary/30 prose-img:shadow-xl max-w-none text-base text-white"
   >
     <slot />
   </div>
