feat: add CaptionedImage component

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,7 +21,7 @@ let date = formatDate(post.data.date);
     </div>
   </div>
   <div
-    class="prose prose-headings:m-1 prose-invert prose-a:hover:text-primary prose-img:rounded-lg prose-img:shadow-primary/30 prose-img:shadow-xl max-w-none text-base text-white"
+    class="prose prose-figcaption:text-center prose-img:mx-auto prose-headings:m-1 prose-invert prose-a:hover:text-primary prose-img:rounded-lg prose-img:shadow-primary/30 prose-img:shadow-xl max-w-none text-base text-white"
   >
     <slot />
   </div>
