--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,13 +5,13 @@
 <div class="mx-auto w-full max-w-screen-lg px-4 py-6">
   <div class="flex justify-between">
     <div class="text-3xl font-bold">
-      <a href="/">Retrocast<span class="text-gray-500">.top</span></a>
+      <a href="/" class="no-def-link">Retrocast<span class="text-gray-500">.top</span></a>
     </div>
     <div class="flex items-center">
       <nav>
         <ul class="hidden flex-row sm:flex">
           <!-- If there are >1 entries, all but last one should also have margin mr-3 -->
-          <li><a href="/blog/" class="hover:text-primary">BLOG</a></li>
+          <li><a href="/blog/" class="no-def-link hover:text-primary">BLOG</a></li>
         </ul>
       </nav>
     </div>
