--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -8,11 +8,11 @@ export interface Props {
 const { post } = Astro.props;
 ---
 
-<a href={`/blog/${post.id}/`}>
+<a href={`/blog/${post.id}/`} class="no-def-link">
   <div
     class="hover:bg-primary/50 h-full rounded-2xl bg-gray-900 p-[1px] text-sm shadow-[inset_0_0_0_1px_rgba(255,255,255,0.4)]"
   >
-    <div class="flex h-full w-full flex-col rounded-[1rem] bg-gray-800 p-4 text-white opacity-90">
+    <div class="flex h-full w-full flex-col rounded-[1rem] bg-gray-900 p-4 text-white opacity-90">
       <div class="flex-auto">
         <div class="flex justify-between pb-4 text-xs">
           <p>{formatDate(post.data.date)}</p>
